--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - name: Checkout code
         env:
-          MY_JSON_CONFIG: ${{ secrets.LINKNBUCKET }} # bucket info and job link
+          LINKNBUCKET: ${{ secrets.LINKNBUCKET }} # bucket info and job link
         uses: actions/checkout@v4
 
       # 1. 登入 GCP
